force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/cgcloud__CP_Search_Strategy_Step__c.object-meta.xml
<CustomObject>
    <description>This object hold the details of the relationship between search strategy and key type, used for searching complex pricing strategy steps.</description>
    <label>Search Strategy Step</label>
    <nameField>
        <displayFormat>SSS - {000000000}</displayFormat>
        <label>Search Strategy Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Strategy Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>