force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Account_Hierarchy_Search__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Hierarchy_Search__c</fullName>
    <description>Specifies if and how the customer hierarchy has to be considered for condition finding.</description>
    <label>Customer Hierarchy Search</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CustLevel1</fullName>
            </value>
            <value>
                <fullName>CustLevel2</fullName>
            </value>
            <value>
                <fullName>CustLevel3</fullName>
            </value>
            <value>
                <fullName>CustLevel4</fullName>
            </value>
            <value>
                <fullName>CustLevel5</fullName>
            </value>
            <value>
                <fullName>CustLevel6</fullName>
            </value>
            <value>
                <fullName>CustLevel7</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>