force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Consider_Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account_Hierarchy__c</fullName>
    <formula>cgcloud__Key_Type__r.cgcloud__Consider_Account_Hierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Hierarchy Only</label>
    <type>Checkbox</type>
</CustomField>