force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Constraint_User_Exit_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Constraint_User_Exit_Id__c</fullName>
    <description>Unique identifier for a user exit that represents a constraint for the search strategy step in question: Step will be skipped if user exit confirms the fulfilled constraint.</description>
    <label>Constraint User Exit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>