force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Customer_Role__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role__c</fullName>
    <description>Specifies the role of the customer relevant for condition finding.</description>
    <inlineHelpText>For Delivery Recipient, Payer or Bill To, the conditions will be found only if they are distributed based on the used distribution rule for the pricing conditions.</inlineHelpText>
    <label>Customer Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Orderer</fullName>
            </value>
            <value>
                <fullName>DeliveryRecipient</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>BillTo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>