force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Exclusive__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether condition search stops after having found a condition.</description>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>