force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Key_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the key type.</description>
    <label>Key Type</label>
    <referenceTo>cgcloud__CP_Key_Type__c</referenceTo>
    <relationshipLabel>Search Strategy Steps</relationshipLabel>
    <relationshipName>Search_Strategy_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>