force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Key_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_Type_Description__c</fullName>
    <formula>cgcloud__Key_Type__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Type Description</label>
    <type>Text</type>
</CustomField>