force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Product_Hierarchy_Only__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Hierarchy_Only__c</fullName>
    <formula>cgcloud__Key_Type__r.cgcloud__Product_Hierarchy_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Hierarchy Only</label>
    <type>Checkbox</type>
</CustomField>