force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Product_Hierarchy_Search__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Hierarchy_Search__c</fullName>
    <description>Specifies if and how the product hierarchy has to be considered for condition finding.</description>
    <label>Product Hierarchy Search</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ProdLevel1</fullName>
            </value>
            <value>
                <fullName>ProdLevel2</fullName>
            </value>
            <value>
                <fullName>ProdLevel3</fullName>
            </value>
            <value>
                <fullName>ProdLevel4</fullName>
            </value>
            <value>
                <fullName>ProdLevel5</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>