force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Search_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Search_Strategy__c</fullName>
    <description>Reference to the search strategy.</description>
    <label>Search Strategy</label>
    <referenceTo>cgcloud__CP_Search_Strategy__c</referenceTo>
    <relationshipLabel>Search Strategy Steps</relationshipLabel>
    <relationshipName>Search_Strategy_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>