force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Position of the search strategy step within the search strategy.</description>
    <label>Sort</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>