force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/validationRules/cgcloud__Check_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Sales_Org</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Key_Type__r.cgcloud__Sales_Org__c) != TEXT(cgcloud__Search_Strategy__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Key_Type__c</errorDisplayField>
    <errorMessage>The Key Type and the Search Strategy must have the same Sales Org.</errorMessage>
</ValidationRule>