force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/validationRules/cgcloud__Consider_Customer_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Customer_Validations</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Key_Type__r.cgcloud__Consider_Account__c == true &amp;&amp;  TEXT(cgcloud__Customer_Role__c) == &apos;&apos;</errorConditionFormula>
    <errorMessage>Customer Role can&apos;t be empty if the Key Type is configured with &apos;Customer or Customer Hierarchy&apos;.</errorMessage>
</ValidationRule>