force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/validationRules/cgcloud__Consider_Product_Hierarchy_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Product_Hierarchy_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Key_Type__r.cgcloud__Product_Hierarchy_Only__c == true &amp;&amp;   TEXT(cgcloud__Product_Hierarchy_Search__c) == &apos;No&apos;</errorConditionFormula>
    <errorMessage>Product Hierarchy Search can&apos;t be &apos;No&apos; if the Key Type is configured with &apos;Product Hierarchy Only&apos;.</errorMessage>
</ValidationRule>