force-app/main/default/objects/cgcloud__CP_Search_Strategy_Step__c/validationRules/cgcloud__Customer_Hierarchy_Search_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Customer_Hierarchy_Search_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Account_Hierarchy_Search__c) != &apos;No&apos; &amp;&amp;  TEXT(cgcloud__Customer_Role__c) != &apos;Orderer&apos;</errorConditionFormula>
    <errorMessage>Customer Role must be &apos;Orderer&apos; if the Customer Hierarchy Search isn&apos;t &apos;No&apos;.</errorMessage>
</ValidationRule>